--- a/NEWCRM/Views/RepCase/rptCaseOnl.cshtml
+++ b/NEWCRM/Views/RepCase/rptCaseOnl.cshtml
@@ -56,7 +56,7 @@
                         <td>@item.casCreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>                        
                         <td>@item.chnID</td>
                         <td>@item.casCreatedByName</td>
-                        <td>@item.casCreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                        <td>@item.caseventDate</td>
                         <td>@item.ctaNumber</td>
                         <td>@item.casLevel1</td>
                         <td>@item.casLevel2</td>
@@ -65,10 +65,10 @@
                         <td>@item.casproductCategory</td>
                         <td>@item.casserviceCategory</td>
                         <td>@item.casdeliveryType</td>
-                        <td></td>
+                        <td>@item.caspaymentType</td>
                         <td>@item.casvalueRange</td>
                         <td>@item.casconversationChannel</td>
-                        <td>@item.casLevel6</td>
+                        <td>@item.casvendorID</td>
                         <td>@item.casdetail</td>
                         <td>@item.casreferenceDetail</td>
                         <td>@item.casstatusReason</td>
