--- a/NEWCRM/Views/RepCase/rptCaseRaw.cshtml
+++ b/NEWCRM/Views/RepCase/rptCaseRaw.cshtml
@@ -47,7 +47,7 @@
                         <tr class="gradeX">
                             <td></td>
                             <td>@item.casCreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                            <td>@item.casCreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                            <td>@item.caseventDate</td>
                             <td>@item.casIDName</td>
                             <td>@item.chnID</td>
                             <td>@item.casLevel2</td>
