--- a/NEWCRM/Views/RepCase/rptCaseCyb.cshtml
+++ b/NEWCRM/Views/RepCase/rptCaseCyb.cshtml
@@ -48,7 +48,7 @@
                         <tr class="gradeX">
                             <td></td>
                             <td>@item.casCreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
-                            <td>@item.casCreatedOn.Value.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                            <td>@item.caseventDate</td>
                             <td>@item.casIDName</td>
                             <td>@item.chnID</td>
                             <td>@item.casLevel2</td>
@@ -59,7 +59,7 @@
                             <td>@item.casLevel3</td>
                             <td>@item.casLevel6</td>
                             <td>@item.casreferenceDetail</td>
-                            <th>@item.casreferenceDetail</th>
+                            <th>@item.casAttachFile</th>
                             <td>@item.casdetail</td>
                         </tr>
                     }
