--- a/NEWCRM/Views/Shared/_Layout.cshtml
+++ b/NEWCRM/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>ONE TO ONE CONTACTS : CRM ORIGIN</title>
+    <title>ONE TO ONE CONTACTS : CRM ETDA</title>
     <!-- BEGIN META -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,11 +36,7 @@
     <link href="~/Content/js/libs/jquery.sumoselect/sumoselect.css" rel="stylesheet" />
     
     
-    <script type="text/javascript" src="~/scripts/jquery-1.9.1.min.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="~/scripts/moment.min.js"></script>
-    <script type="text/javascript" src="~/scripts/bootstrap.min.js"></script>
 
     <!-- include your less or built css files  -->
     <!--
